--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -12,7 +12,8 @@ Eine Funktion ist stetig an der Stelle $x_{0}$, wenn:
 \item $\lim\limits_{x \rightarrow x_{0}} {f(x)}$ existiert
 \item $\lim\limits_{x \rightarrow x_{0}^{\pm}} {f(x)}=f(x_{0})$\\
 \end{enumerate}
-\end{Definition}
+\end{Definition}\\
+
 Stetigkeit ist eine lokale Eigenschaft. Die Funktion $f$ hei"st dann stetig, wenn sie an jeder Stelle ihrer Definitionsmenge stetig ist.
 
 \begin{Bemerkung}
@@ -49,6 +50,7 @@ Dieser Grenzwert ist die \textbf{Ableitung} von $f$ an der Stelle $x_{0}$.\\
 Die Funktion hei"st differenzierbar, wenn sie $\forall x \in D$ differenzierbar ist.\\
 \end{Definition}
 \\
+
 Die Funktion $f(x)=|x|$ ist nicht differenzierbar, da bei der Stelle $x_{0}=0$ der linksseitige Grenzwert des Differenzenquotienten ($\lim\limits_{h \rightarrow 0^{-}}{f'(x_{0})=-1}$) nicht mit dem rechtsseitigen Grenzwert (1) "ubereinstimmt.\\
 
 \subsection{Zusammenhang zwischen Stetigkeit und Differenzierbarkeit}
@@ -113,16 +115,18 @@ $$f'(x_{0})=v'(x_{0})\cdot u'(v(x_{0}))$$
 \subsection{Tangente und Normale}
 \begin{Theorem}
 Ist die Funktion $f$ differenzierbar an der Stelle $x_{0}$, dann hat die \textbf{Tangente} an dem Graphen von $f$ die Steigung $a=f'(x_{0})$ und den Y-Achsenabschnitt $b=-f'(x_{0})\cdot x_{0}+f(x_{0})$. Daraus ergibt sich die Tangentengleichung:\\
-\\
-$T_{x_{0}}(x)=f'(x_{0})\cdot (x-x_{0})+f(x_{0}) $ \\
+
+$$T_{x_{0}}(x)=f'(x_{0})\cdot (x-x_{0})+f(x_{0}) $$ \\
 \end{Theorem}
 \\
-Eine Merkhilfe dazu ist das Wort "`Fuxufu"', wobei "`u"' dem $x_{0}$ entspricht.\\
+\begin{Bemerkung}
+	Eine Merkhilfe dazu ist das Wort "`Fuxufu"', wobei "`u"' dem $x_{0}$ entspricht.\\
+\end{Bemerkung}
 \\
+\begin{Definition}
 Die \textbf{Normale} an der Stelle $x_{0}$ bezeichnet die Gerade, die genau senkrecht zur Tangente steht und diese im Ber"uhrpunkt des Graphen schneidet.\\
-\\
-$N_{x_{0}}(x)=-\frac{1}{f'(x_{0})}\cdot (x-x_{0})+f(x_{0})$\\
-
+$$N_{x_{0}}(x)=-\frac{1}{f'(x_{0})}\cdot (x-x_{0})+f(x_{0})$$\\
+\end{Definition}
 
 \section{Vollst"andige Funktionsuntersuchung}
 
@@ -188,10 +192,10 @@ $\lim\limits_{x \rightarrow x_{0}}f(x) = g $\quad $\Leftrightarrow$ \quad $\fora
 
 \begin{Definition}
 Regel von l'Hospital: f"ur Grenzwerte des Typs $0/0$ und $\infty/\infty$\\\\
-Seien zwei Funktionen $f$ und $g$ differenzierbar und eine Zahl $x_{0}$ : g(x_{0})\neq0$ und gelte entweder\\\\
-\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = \infty$ \qquad ODER \qquad  $\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = 0$\\\\
-(sie sind also entweder konvergent gegen $0$ oder bestimmt divergent) \\dann gilt:\\\\
-$\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarrow x_{0}}\dfrac{f'(x)}{g'(x)}$\\
+Seien zwei Funktionen $f$ und $g$ differenzierbar und eine Zahl $x_{0}$ : $g(x_{0})\neq0$ und gelte entweder\\
+$$\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = \infty \qquad \text{ODER} \qquad  \lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = 0$$\\
+(sie sind also entweder konvergent gegen $0$ oder bestimmt divergent) \\dann gilt:\\
+$$\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarrow x_{0}}\dfrac{f'(x)}{g'(x)}$$\\
 \end{Definition}
 
 \begin{Bemerkung}
@@ -330,11 +334,13 @@ $|D_{f}| \leq |W_{f}|$.\quad Beispiel: $\quad f(x)=2x$ \quad mit \quad $D_{f}=\Z
 
 $|D_{f}| = |W_{f}|$. \quad Beispiel: $\qquad f(x)=x^3 $\\\\
 \end{description}
+\end{Definition}
+\begin{Bemerkung}
 Ausführlichere Erklärungen hier, einfach auf die Links klicken:\\
 \href{http://www.math.uni-konstanz.de/~huynh/Vorkurs2015/Vorlesung_12.pdf}{\textcolor{blue}{Uni Vorlesungsskript}} \qquad oder \qquad
 \href{https://www.mathe-online.at/mathint/fun1/i_isb.html}{\textcolor{blue}{Überschaubar(er) mit Graphen}} \\
+\end{Bemerkung}
 
-\end{Definition}
 
 \subsection{Umkehrbarkeit}
 
