--- a/style.tex
+++ b/style.tex
@@ -64,7 +64,7 @@
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
      skipabove=.5\baselineskip
-   ]\underline{Bemerkung:}\\}
+   ]\underline{Bemerkung:}\\\\}
 {\end{mdframed}}
 
 %GTR-Tipp
