--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,8 @@
 
 \usepackage[scale=.9]{helvet} % or tgheros
 \renewcommand{\familydefault}{\sfdefault}
+\setlength{\parindent}{0em}
+\setlength{\parskip}{0em}
 
 \begin{document}
   \include{title}
