--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -427,8 +427,8 @@ $$d(P_{1};P_{2})=k\cdot\lambda\quad;k\in\Z$$
 et ils sont en opposition de phase si
 $$d(P_{1};P_{2})=(2k+1)\cdot\dfrac{\lambda}{2};\quadk\in\Z$$
 
-L'indice de réfraction $n$ et la célérité des ondes électromagnétiques sont proportionnels:
-$$v$$
+L'indice de réfraction $n$ et la célérité $v_{\Phi}$ des ondes électromagnétiques sont proportionnels:
+$$v_{\Phi} = \dfrac{c}{n}$$
 \end{Definition}
 
 
