--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -188,7 +188,7 @@ $\lim\limits_{x \rightarrow x_{0}}f(x) = g $\quad $\Leftrightarrow$ \quad $\fora
 
 \begin{Definition}
 Regel von l'Hospital: f"ur Grenzwerte des Typs $0/0$ und $\infty/\infty$\\\\
-Seien zwei Funktionen $f$ und $g$ differenzierbar und eine Zahl $x_{0}$ : g(x_{0})\neq0$ und gelte entweder\\\\
+Seien zwei Funktionen $f$ und $g$ differenzierbar und gelte entweder\\\\
 \lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = \infty$ \qquad ODER \qquad  $\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = 0$\\\\
 (sie sind also entweder konvergent gegen $0$ oder bestimmt divergent) \\dann gilt:\\\\
 $\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarrow x_{0}}\dfrac{f'(x)}{g'(x)}$\\
