--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -12,6 +12,23 @@ $(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $a:\N\rightarrow\R$
 \begin{Bemerkung}
 In einem Ausdruck muss das $n$ immer dasselbe bleiben!
 \end{Bemerkung}
+
+
+\begin{GTR-Tipp}
+Um statt Funktionen Folgen zu behandeln:
+\begin{itemize}
+\item\textcolor{gray}{ON} $\rightarrow \textcolor{red}{\text{MODE}} \rightarrow \text{Zeile 4: statt \textcolor{gray}{FUNC} \textcolor{red}{SEQ} auswählen}$
+\item in \textcolor{gray}{Y=}
+\item Mit $nMin$ den Startindex angeben
+\item Mit $u(n)$ die Folgenvorschrift angeben
+\item Falls die Folge rekursiv anzugeben ist, muss mit $u(nMin)$ das Startglied angegeben werden
+\end{itemize}
+\end{GTR-Tipp}
+
+\begin{Bemerkung}
+Es ist üblich eine rekursive Folge mit $a_{n+1}$ in Abhängigkeit von $a_n$ zu haben. Dies Darstellung ist mit dem GTR nicht direkt verwendbar. Man muss es "umschreiben" um $a_n$ in Abhängigkeit von $a_{n-1}$ zu haben.
+\end{Bemerkung}
+
 		\section{Verschiedene Darstellungen}
 
 
@@ -33,7 +50,7 @@ $a_{n}=1+2\cdot(n-1) \Rightarrow$ Die 8. positive, ungerade Zahl ist $ a_{8}=1+2
 	\subsection{Rekursive Darstellung}
 
 \begin{Definition}
-Wenn für die Berechnung des $n-ten$ Gliedes einer Folge das $(n-1)-te$ Glied benötigt wird, ist ihre Darstellung rekursiv.
+Wenn für die Berechnung des $n-ten$ Gliedes eines (oder sogar mehrere) der vorherigen Glieder benötigt wird, ist ihre Darstellung rekursiv.
 In diesen Fällen braucht man immer ein Startglied, oft $a_{0}$ oder $ a_{1}$.
 \end{Definition}
 
@@ -53,24 +70,84 @@ $a_{n}=a_{n-1}+2;a_{1}=1$
 Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darstellung oftmals viel praktischer ist, da die Berechnung der Folgeglieder anhand der rekursiven Darstellung schnell sehr aufwendig wird.
 \end{Bemerkung}
 
-\begin{GTR-Tipp}
-Wie man im GTR macht
-\end{GTR-Tipp}
-
 \subsubsection{Web-Diagramme}
 Hier handelt es sich um ein graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.\\
-Dazu muss man der rekursiven Folgenvorschrift eine Funktion $f(a_{n-1})=a_{n}$ zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen". Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die Hauptdiagonale ein (entspricht dem Graphen von $f(x)=x$).\\
-Dann trägt man das erste Folgeglied auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen\\
+Dazu muss man der rekursiven Folgenvorschrift eine Funktion $f(a_{n-1})=a_{n}$ zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen". Man muss verstehen, dass es sich hierbei nicht um den Graphen der Folge handelt, die Werte der Folgenglieder sind nicht wie gewohnt abzulesen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die Hauptdiagonale ein (entspricht dem Graphen von $f(x)=x$).  Exemplarisch wird hier die Folge $a_{n+1}=2\sqrt{a_n}+2$ behandelt, entsprechend ist die Hilfsfunktion hier $f$ mit $f(x)=2\sqrt{x} +2$.\\
 
-\begin{Beispiel}
-\end{Beispiel}
+%graph mit nur funktion und diagonale 
+
+\definecolor{ttqqqq}{rgb}{0.2,0,0}
+\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]
+\begin{axis}[
+x=1cm,y=1cm,
+axis lines=middle,
+ymajorgrids=true,
+xmajorgrids=true,
+xmin=-5.088547334373463,
+xmax=10.65108937607874,
+ymin=-3.575119239735864,
+ymax=9.474639170629912,
+xtick={-4,-2,...,22},
+ytick={-4,-2,...,10},]
+\clip(-5.088547334373463,-4.075119239735864) rectangle (22.65108937607874,10.874639170629912);
+\draw[line width=2pt,color=sexdts,smooth,samples=100,domain=2.505408374793447e-7:22.65108937607874] plot(\x,{2*sqrt((\x))+2});
+\draw[line width=2pt,color=ttqqqq,smooth,samples=100,domain=-5.088547334373463:22.65108937607874] plot(\x,{(\x)});
+\begin{scriptsize}
+\draw[color=sexdts] (0.8405353212957103,2.9444911186724285) node {$f$};
+\draw[color=ttqqqq] (-1.446396560176685,-3.1751691937860826) node {$Hauptdiagonale$};
+\end{scriptsize}
+\end{axis}
+\end{tikzpicture}
+\newpage
+Dann trägt man den Wert des ersten Folgegliedes auf die Abzissenachse ein und verbindet ihn mit der entsprechenden Funktion anhand eines vertikalen Striches. Der Ordinatenwert, der so erhalten wird (Punkt \textcolor{blue}{A}), entspricht dem Wert von $a_1$. Um den Vorgang erneuern zu können, muss der gefundene Wert wieder auf die Abzissenachse, dazu benutzt man die Hauptdiagonale als "Spiegel". Ein horizontaler Strich bis zur Hauptdiagonale (zum Punkt \textcolor{blue}{B})  und ein vertikaler bis zur Abzissenachse lösen das Problem. So ist der Wert von $a_1$ aud der Abzissenachse, dort wird er für den nächsten Schritt benötigt.
+
+
+ Exemplarisch wird hier die Folge $a_{n+1}=2\sqrt{a_n}+2$ behandelt. \\
+%graph mit nur a0 und a1
+\definecolor{rvwvcq}{rgb}{0.08235294117647059,0.396078431372549,0.7529411764705882}
+\definecolor{ffqqqq}{rgb}{1,0,0}
+\definecolor{ttqqqq}{rgb}{0.2,0,0}
+\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]
+\begin{axis}[
+x=1cm,y=1cm,
+axis lines=middle,
+ymajorgrids=true,
+xmajorgrids=true,
+xmin=-1.7059310726041948,
+xmax=13.731302722239086,
+ymin=-2.01447455212563,
+ymax=10.670477401431077,
+xtick={-1,0,...,21},
+ytick={-2,-1,...,10},]
+\clip(-1.8059310726041948,-2.01447455212563) rectangle (21.731302722239086,10.670477401431077);
+\draw[line width=2pt,color=sexdts,smooth,samples=100,domain=1.4376221380591118e-7:21.731302722239086] plot(\x,{2*sqrt((\x))+2});
+\draw[line width=2pt,color=ttqqqq,smooth,samples=100,domain=-1.8059310726041948:21.731302722239086] plot(\x,{(\x)});
+\draw [line width=2pt] (0,0)-- (0,2);
+\draw [line width=2pt] (0,2)-- (2,2);
+\draw [line width=2pt] (2,2)-- (2,0);
+\begin{scriptsize}
+\draw [fill=ffqqqq] (0,0) circle (2.5pt);
+\draw[color=ffqqqq] (0.22437993412656146,0.3841672124633506) node {$a0$};
+\draw [fill=rvwvcq] (0,2) circle (2.5pt);
+\draw[color=rvwvcq] (0.15251051795910106,2.378543511110368) node {$A$};
+\draw [fill=rvwvcq] (2,2) circle (2.5pt);
+\draw[color=rvwvcq] (2.146886816606127,2.378543511110368) node {$B$};
+\draw [fill=ffqqqq] (2,0) circle (2.5pt);
+\draw[color=ffqqqq] (2.2187562327735875,0.3841672124633506) node {$a1$};
+\end{scriptsize}
+\end{axis}
+\end{tikzpicture}
+
+
 
 \begin{Bemerkung}
 Dieses Verfahren kann ausschließlich bei rekusiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel: $a_{n}=3\cdot a_{n-1}+3+4\cdot n$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern von anderen Rekursivitätsebenen wie $a_{n-2}$ (Beispiel: die Fibonacci-Folge).\\
 \end{Bemerkung}
 
 \begin{GTR-Tipp}
-Verwendung mit dem GTR
+
 \end{GTR-Tipp}
 
 
